# Testnice

./: Cargo.toml  README.md  build.sh  sched.c
src/: cli.rs  command.rs  log.rs  main.rs  nix_ext.rs  tui.rs  util.rs
