[package]
name = "nice_level"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
crossterm = "0.27.0"
file-guard = "0.1.0"
file-lock = "2.1.10"
linux-sys = "0.0.0"
nix = { version = "0.27.1", features = ["process"] }
nom = "7.1.3"
owo-colors = "4.0.0"
ratatui = "0.25.0"
